--- a/index.html
+++ b/index.html
@@ -13,5 +13,19 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus ipsam nihil eligendi ab reprehenderit illo in temporibus, dicta tempora? Molestiae reprehenderit in neque ipsum quibusdam minima aliquam? Nemo, perspiciatis nulla!
         </p>
       </div>
+
+      <div>
+        <h3>My First Blog</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus ipsam nihil eligendi ab reprehenderit illo in temporibus, dicta tempora? Molestiae reprehenderit in neque ipsum quibusdam minima aliquam? Nemo, perspiciatis nulla!
+        </p>
+      </div>
+      
+      <div>
+        <h3>My First Blog</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus ipsam nihil eligendi ab reprehenderit illo in temporibus, dicta tempora? Molestiae reprehenderit in neque ipsum quibusdam minima aliquam? Nemo, perspiciatis nulla!
+        </p>
+      </div>
 </body>
 </html>
