--- a/index.html
+++ b/index.html
@@ -20,12 +20,21 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus ipsam nihil eligendi ab reprehenderit illo in temporibus, dicta tempora? Molestiae reprehenderit in neque ipsum quibusdam minima aliquam? Nemo, perspiciatis nulla!
         </p>
       </div>
-      
+
       <div>
         <h3>My First Blog</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus ipsam nihil eligendi ab reprehenderit illo in temporibus, dicta tempora? Molestiae reprehenderit in neque ipsum quibusdam minima aliquam? Nemo, perspiciatis nulla!
         </p>
+      </div>
+
+      <div>
+        <h3>You to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit message"</li>
+            <li>git push</li>
+        </ul>
       </div>
 </body>
 </html>
