--- a/index.html
+++ b/index.html
@@ -36,5 +36,10 @@
             <li>git push</li>
         </ul>
       </div>
+
+      <div>
+        <h3>kim kim kim khay shudho dim</h3>
+        <img src="images/kim.jpg" alt="">
+      </div>
 </body>
 </html>
